@@ -6,6 +6,7 @@ The following people made especially gracious contributions of their
 time and energy in helping to track down bugs, add new features, and
 generally assist in the GRUB maintainership process:
 
+Adrian Phillips <a.phillips@dnmi.no>
 Alessandro Rubini <rubini@gnu.org>
 Alexander K. Hudek <alexhudek@home.com>
 Andrew Clausen <clausen@gnu.org>
